[gd_scene load_steps=4 format=3 uid="uid://dxmhh27jcx3s0"]

[ext_resource type="Script" path="res://ScriptFolder/Control.gd" id="1_5cyoc"]
[ext_resource type="Texture2D" uid="uid://bunv4yrch5qxy" path="res://Assets/abstract-blur-background-with-pastel-color-free-vector.jpg" id="2_quxrb"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v1lnv"]
blend_mode = 2

[node name="Password" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 323.0
offset_bottom = 321.0
scale = Vector2(2.33648, 2.07581)
pivot_offset = Vector2(8.65461, 11.3627)
script = ExtResource("1_5cyoc")

[node name="DisplayPasscode" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 0
visibility_layer = 2
z_index = 2
material = SubResource("CanvasItemMaterial_v1lnv")
layout_mode = 0
offset_left = -52.4007
offset_top = -10.4903
offset_right = 297.599
offset_bottom = 189.51
scale = Vector2(1.18106, 1.57386)
texture = ExtResource("2_quxrb")

[node name="Key_1" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 45.247
offset_top = 57.0
offset_right = 84.247
offset_bottom = 98.0
text = "_"
horizontal_alignment = 1

[node name="Key_2" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 78.247
offset_top = 57.0
offset_right = 131.247
offset_bottom = 99.0
text = "_"
horizontal_alignment = 1

[node name="Key_3" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 126.247
offset_top = 57.0
offset_right = 166.247
offset_bottom = 83.0
text = "_"
horizontal_alignment = 1

[node name="Key_4" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 166.247
offset_top = 57.0
offset_right = 206.247
offset_bottom = 83.0
text = "_"
horizontal_alignment = 1

[node name="Passcode" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 86.2471
offset_top = 28.0
offset_right = 158.247
offset_bottom = 54.0
text = "Passcode"

[node name="Button" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 37.4441
offset_top = 89.244
offset_right = 45.4441
offset_bottom = 97.244
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "1"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.018
offset_top = 89.244
offset_right = 112.018
offset_bottom = 97.244
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "2"
horizontal_alignment = 1

[node name="Button3" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 170.592
offset_top = 89.2441
offset_right = 178.592
offset_bottom = 97.2441
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "3"
horizontal_alignment = 1

[node name="Button4" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 37.4441
offset_top = 133.866
offset_right = 45.4441
offset_bottom = 141.866
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button4"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "4"
horizontal_alignment = 1

[node name="Button5" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.018
offset_top = 133.866
offset_right = 112.018
offset_bottom = 141.866
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button5"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "5"
horizontal_alignment = 1

[node name="Button6" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 170.592
offset_top = 133.866
offset_right = 178.592
offset_bottom = 141.866
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button6"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "6"
horizontal_alignment = 1

[node name="Button7" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 37.4441
offset_top = 175.64
offset_right = 45.4441
offset_bottom = 183.64
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button7"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "7"
horizontal_alignment = 1

[node name="Button8" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.018
offset_top = 175.64
offset_right = 112.018
offset_bottom = 183.64
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button8"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "8"
horizontal_alignment = 1

[node name="Button9" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 170.592
offset_top = 175.64
offset_right = 178.592
offset_bottom = 183.64
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button9"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "9"
horizontal_alignment = 1

[node name="Button10" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 105.867
offset_top = 217.414
offset_right = 113.867
offset_bottom = 225.414
scale = Vector2(3.66667, 3.5)

[node name="Label" type="Label" parent="Button10"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 13.7304
offset_top = 20.1287
offset_right = 53.7304
offset_bottom = 46.1287
scale = Vector2(0.324675, 0.3625)
text = "0"
horizontal_alignment = 1

[node name="Delete" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 235.317
offset_top = 112.979
offset_right = 243.317
offset_bottom = 120.979
scale = Vector2(9.46737, 4.64015)

[node name="Label" type="Label" parent="Delete"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 15.679
offset_top = 20.7751
offset_right = 66.679
offset_bottom = 46.7751
scale = Vector2(0.17316, 0.284473)
text = "Delete"
horizontal_alignment = 1

[node name="Enter" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 239.015
offset_top = 158.551
offset_right = 247.015
offset_bottom = 166.551
scale = Vector2(9.46737, 4.64015)

[node name="Label" type="Label" parent="Enter"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -2.0
anchor_top = -2.55
anchor_right = -2.0
anchor_bottom = -2.55
offset_left = 15.679
offset_top = 20.7751
offset_right = 66.679
offset_bottom = 46.7751
scale = Vector2(0.17316, 0.284473)
text = "Enter"
horizontal_alignment = 1

[node name="Button11" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 253.615
offset_top = 15.5236
offset_right = 261.615
offset_bottom = 23.5236
scale = Vector2(3.71123, 4.10661)

[node name="Label" type="Label" parent="Button11"]
z_index = 3
layout_mode = 0
offset_left = 1.96052
offset_top = 0.586541
offset_right = 41.9605
offset_bottom = 26.5865
scale = Vector2(0.365268, 0.242083)
text = "X"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Button11" to="." method="_on_button_11_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
